--- a/Compass.Domain.Tests/Compass.Domain.Tests.csproj
+++ b/Compass.Domain.Tests/Compass.Domain.Tests.csproj
@@ -6,6 +6,10 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <NoWarn>1701;1702;1705;NU1603;NU1701</NoWarn>
+  </PropertyGroup>
+
   <ItemGroup>
     <Compile Remove="Publish\**" />
     <Compile Remove="TestResults\**" />
