--- a/Compass.Domain/Compass.Domain.csproj
+++ b/Compass.Domain/Compass.Domain.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <NoWarn>1701;1702;1705</NoWarn>
+    <NoWarn>1701;1702;1705;NU1701;NU1603</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
